fix(Login) improves wrapper top margin on mobile

--- a/src/components/pages/Editor/index.module.sass
+++ b/src/components/pages/Editor/index.module.sass
@@ -3,6 +3,13 @@
 $windowHeight: calc(100vh - $navbar-height - $size-7)
 $primary-very-light: #cbefdf
 
+.loginWrapper
+	position: relative
+	margin-top: 3rem
+
+	+tablet
+		margin-top: 6rem
+
 .fieldsContainer
 	+desktop
 		min-width: min(40%, 27rem)
